# ECE5725-Final-Project

./: .gitignore
.github/workflows/: linux.yml  macos.yml  webassembly.yml  windows.yml
microcontroller/: README.md
microcontroller/demos/esb_prx_test/src/: main.c
microcontroller/demos/esb_ptx_test/.zed/: tasks.json
microcontroller/demos/esb_ptx_test/src/: main.c
microcontroller/demos/lsm6dsl/src/: main.c
microcontroller/dongle_rx/: CMakePresets.json  prj.conf  sample.yaml
microcontroller/dongle_rx/src/: imu.h  main.c
microcontroller/imu_tx/: CMakeLists.txt  CMakePresets.json  sample.yaml
microcontroller/imu_tx/boards/: xiao_overlay.overlay
microcontroller/imu_tx/src/: button.c  button.h  imu.c  imu.h  main.c
microcontroller/tx/: prj.conf
microcontroller/tx/src/: imu.c
pi/: IMU.py  dongleparse.c  dongleparse.py
pi/IMU/: IMU.py
pi/c-game/: CMakeLists.txt
pi/c-game/.zed/: tasks.json
pi/c-game/src/: Makefile  button.c  button.h  dongleparse.h  fruit.c  fruit.h  imu_cursor.c  imu_cursor.h  raylib_game.c  screen_ending.c  screen_gameplay.c  screen_title.c  screens.h
pi/lab3code/: blink.py  blink_pwm.py  motor_control.py  rolling_control.py  run_test.py  sdl_v2.py  start_script.sh  two_wheel.py
pi/old/: IMU.py  ahrs.py  dongleparse.py  imu_main.py  imu_math.py  imu_reader.py  plotter.py
pi/restructure/: ahrs.py  calibration.py  complementary.py  config.py  datatypes.py  display.py  imu_adapter.py  main.py  motor.py  vision.py
pi/testFinalProject/: calibration.py  config.py  cv_demo.py  display.py  imu_adapter.py  main.py  motor.py  motorTest.py
website/: index.html  starter-template.css
website2/: cornell.css  index.html
